# c-compiler-rv

./: .gitignore  pyproject.toml
src/: utils.py
src/backend/: ir2asm.py
src/backend/base/: emitter.py
src/backend/hw/: reg.py  rv64.py
src/backend/ir/: hir.py  ir.py
src/frontend/: astdef.py  grammar.lark
src/middlend/: ast2ir.py  opt.py
src/parser/: grammar.lark  parser.py
src/printer/: base_transformer.py  emitter.py  hir.py  ir.py  ir2asm.py  opt.py  reg.py  rv64.py  transformer.py
src/syntax/: ast2ir.py  astdef.py  exptypes.py  extypes.py  transformer.py
tests/: qemu.py  test.py
tests/cpu_testbench/: .gitignore  Makefile  run.sh  stdlib.c
tests/golden/: 0_parse_base.yml  0_parse_if.yml  1_ast.yml  2_ir.yml  3_asm.yml  ast.yml  ast_base.yml  ir.yml  parse_ctrl.yml  parse_def.yml  parse_if.yml  test.c
